--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-bootstrap": "^2.0.3",
     "react-date-picker": "^8.3.6",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
